# horus-os

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: CODEOWNERS  DISCUSSION_STATUS_POST.md  PULL_REQUEST_TEMPLATE.md  SAVED_REPLIES.md  dependabot.yml  pip-audit-ignore.txt
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  feature.yml  feature_request.yml  security.yml
.github/pip-audit-tracking/: README.md
.github/workflows/: audit.yml  ci.yml  issue-claim-watcher.yml  release.yml  zizmor.yml
.planning/: PROGRAM-v0.9-v0.14.md  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  autonomous-53-57-summary.md  config.json  discussion-status-v0.6.md  phase-59-flip.patch  phase-59-publish-guide.md  v0.6-rehearsal-ready.md  v0.7-design-inspiration.md
.planning/decisions/: no-cla.md  no-pypi-in-v0.6.md  no-stale-bot.md  sbom-cyclonedx.md  sigstore-keyless.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v0.9-gap-analysis.md
.planning/rollback/: flip-gate-revert.md
docs/: CLI.md  DEPLOY-VERCEL.md  LABEL-TAXONOMY.md  MAINTAINER-RUNBOOK.md  MCP.md  MIGRATION-v0.1-to-v0.2.md  MIGRATION-v0.2-to-v0.3.md  MIGRATION-v0.3-to-v0.4.md  MIGRATION-v0.4-to-v0.5.md  MIGRATION-v0.5-to-v0.7.md  MIGRATION-v0.7-to-v0.8.md  OBSERVABILITY.md  OTEL.md  PLUGIN-SECURITY.md  PLUGINS.md  RELEASE-NOTES-v0.7.0.md  RELEASE.md  REMOTE.md  SUPABASE.md  TRIAGE.md  WEB-ACCESS.md  manifest-v1.schema.json
docs-site/: .gitignore  DEPLOY.md  README.md  next.config.ts  package-lock.json  package.json
docs-site/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
docs-site/components/: Breadcrumbs.tsx  Callout.tsx  CodeBlock.tsx  CopyButton.tsx  DocMarkdown.tsx  DocsShell.tsx  Pagination.tsx  SearchDialog.tsx  SidebarNav.tsx  TableOfContents.tsx  TopBar.tsx
docs-site/lib/: content.ts  nav.ts  site.ts
docs-site/scripts/: gen-search-index.mjs
docs/adapters/: CALENDAR.md  DISCORD.md  EMAIL.md  SLACK.md  VOICE.md
examples/: README.md  calendar_adapter.py  custom_adapter.py  discord_adapter.py  email_adapter.py  multi_agent.py  slack_adapter.py  streaming.py
examples/horus-os-example-plugin/: README.md  pyproject.toml
examples/horus-os-example-plugin/src/horus_os_example_plugin/: __init__.py  adapter.py  horus-plugin.toml  tools.py
examples/horus-os-example-plugin/tests/: conftest.py  test_example_plugin.py
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/components/: AppShell.tsx  CommandBlock.tsx  CopyButton.tsx  DashboardHome.tsx  EmptyState.tsx  ExampleDataBanner.tsx  MarkdownRenderer.tsx  MarketingLanding.tsx  MetricCard.tsx  MiniChart.tsx  Modal.tsx  PageHeader.tsx  PageSkeleton.tsx  Sidebar.tsx  StatusBadge.tsx  StatusDot.tsx  StatusIcon.tsx  Stepper.tsx  StubPage.tsx  TourOverlay.tsx  TourProvider.tsx  index.ts
frontend/lib/: api.ts  hooks.ts  query-keys.ts  status-colors.ts  supabase-reads.ts  supabase.ts  time.ts  types.ts  use-is-desktop.ts  use-tab-param.ts
scripts/: _ci_assert_otel_runtime_error.py  _ci_assert_otel_with_extra.py  build_dashboard.py  build_manifest_schema.py  build_v0_3_fixture.py  build_v0_4_fixture.py  capture_v0_3_baseline.py  capture_v0_4_baseline.py  install_smoke.py  install_smoke_plugin.py  lint_no_wallclock.py  release_gate.py  verify_release.py
scripts/discord_community/: README.md  audit_logger.py  build_server.py
site/: index.html
src/horus_os/: __init__.py  __main__.py  agent.py  config.py  storage.py  types.py
supabase/migrations/: 001_initial.sql
tests/: conftest.py  test_adapters_calendar.py  test_adapters_discord.py  test_adapters_discord_bot.py  test_adapters_discovery.py  test_adapters_email.py  test_adapters_integration.py  test_adapters_lifecycle.py  test_adapters_otel.py  test_adapters_otel_bounded_shutdown.py  test_adapters_otel_install_smoke.py  test_adapters_otel_pii_redaction.py  test_adapters_slack.py  test_adapters_voice.py  test_adapters_webhook.py  test_agent.py  test_agent_loop.py  test_audit_yml_structure.py  test_ci_matrix_three_os.py  test_cli_agents.py  test_cli_init.py  test_cli_run.py  test_cli_serve.py  test_cli_traces.py  test_cli_usage.py  test_config.py  test_contributor_docs_substrate.py  test_conversation_anthropic.py  test_conversation_gemini.py  test_dashboard_adapters.py  test_dashboard_agents_extension.py  test_dashboard_api.py  test_dashboard_observability.py  test_dashboard_pricing_banner.py  test_dashboard_serving.py  test_decision_no_pypi.py  test_delegation.py  test_dependabot_yml_structure.py  test_docs_web_access.py  test_doctor_local.py  (+92 more)
tests/ci_guards/: sample_clean.txt  sample_emdash.txt
tests/docs/: test_deploy_vercel_md.py  test_manifest_schema_json_in_sync.py  test_migration_v04_v05_schema_commands.py  test_migration_v05_v07.py  test_plugin_security_threat_sentence.py  test_plugins_md_anatomy.py  test_remote_md.py
tests/fixtures/: __init__.py  usage_output_schema.json  v0_3_database.sqlite3  v0_4_database.sqlite3
tests/mcp/: conftest.py  stub_mcp_server.py  test_mcp_config.py  test_mcp_lifespan_wiring.py  test_mcp_namespacing.py  test_mcp_sanitize.py  test_mcp_subprocess_teardown.py  test_mcp_trace_integration.py  test_mcp_trust_gate.py
tests/observability/: __init__.py  test_bus.py  test_cost_annotator.py  test_cost_annotator_e2e.py  test_persister.py  test_pitfall_3_negative_latency.py  test_pitfall_9_tool_status_columns.py  test_pricing_override.py  test_pricing_staleness.py  test_pricing_table.py  test_queries_agent_totals.py  test_queries_cost_by_agent.py  test_queries_cost_by_model.py  test_queries_latency_percentiles.py  test_queries_tool_reliability.py  test_queries_window.py  test_run_end_rollup_integration.py  test_runner_capture.py  test_sse_capture.py  test_tool_loop_capture.py
tests/perf/: __init__.py  (+5 more)
(+550 files in other folders)
