[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horus-os"
version = "0.4.0"
description = "An open-source, self-hosted autonomous AI command center."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "horus-os contributors" },
]
keywords = ["ai", "agents", "self-hosted", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
# v0.5 base deps: pydantic for plugin manifest validation, packaging for PEP 440 horus_os_compat parsing. See REL-10.
dependencies = [
    "pydantic>=2.7,<3",
    "packaging>=24.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=0.3"]
dashboard = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
discord = ["discord.py>=2.3"]
slack = ["slack-sdk>=3.27"]
calendar = [
    "google-api-python-client>=2.110",
    "google-auth-oauthlib>=1.2",
]
otel = [
    "opentelemetry-sdk>=1.42,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42,<2.0",
]
all = [
    "anthropic>=0.40",
    "google-genai>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "discord.py>=2.3",
    "slack-sdk>=3.27",
    "google-api-python-client>=2.110",
    "google-auth-oauthlib>=1.2",
    "opentelemetry-sdk>=1.42,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42,<2.0",
]
dev = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
horus-os = "horus_os.__main__:main"

[project.entry-points."horus_os.adapters"]
webhook = "horus_os.adapters.webhook:WebhookAdapter"
discord = "horus_os.adapters.discord_adapter:DiscordAdapter"
slack = "horus_os.adapters.slack_adapter:SlackAdapter"
email = "horus_os.adapters.email_adapter:EmailAdapter"
calendar = "horus_os.adapters.calendar_adapter:CalendarAdapter"
otel = "horus_os.adapters.otel_adapter:OtelAdapter"

[project.urls]
Homepage = "https://github.com/Ridou/horus-os"
Issues = "https://github.com/Ridou/horus-os/issues"
Source = "https://github.com/Ridou/horus-os"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"horus_os.server" = ["static/*.html", "static/*.css", "static/*.js"]
"horus_os.observability" = ["pricing.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length is enforced by formatter, not linter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
