[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horus-os"
version = "0.7.0"
description = "An open-source, self-hosted autonomous AI command center."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "horus-os contributors" },
]
keywords = ["ai", "agents", "self-hosted", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
# v0.5 base deps: pydantic for plugin manifest validation, packaging for PEP 440 horus_os_compat parsing. See REL-10.
dependencies = [
    "pydantic>=2.7,<3",
    "packaging>=24.0",
    "starlette>=0.46.0",
    "croniter>=6.1,<7",
    # Windows ships no IANA tz database, so the Phase 66 scheduler's stdlib
    # zoneinfo lookups (resolve_tz) raise ZoneInfoNotFoundError without it.
    # Linux and macOS use the system tz data, so scope this to Windows.
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=0.3"]
local-llm = ["openai>=2.40,<3"]
dashboard = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
discord = ["discord.py>=2.4"]
supabase = ["httpx>=0.27"]
vercel = ["httpx>=0.27"]
github = ["httpx>=0.27"]
slack = ["slack-sdk>=3.27"]
calendar = [
    "google-api-python-client>=2.110",
    "google-auth-oauthlib>=1.2",
]
otel = [
    "opentelemetry-sdk>=1.42,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42,<2.0",
]
all = [
    "anthropic>=0.40",
    "google-genai>=0.3",
    "openai>=2.40,<3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "slack-sdk>=3.27",
    "google-api-python-client>=2.110",
    "google-auth-oauthlib>=1.2",
    "opentelemetry-sdk>=1.42,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42,<2.0",
]
dev = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pip-audit>=2.10,<3",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
horus-os = "horus_os.__main__:main"

[project.entry-points."horus_os.adapters"]
webhook = "horus_os.adapters.webhook:WebhookAdapter"
discord = "horus_os.adapters.discord_adapter:DiscordAdapter"
slack = "horus_os.adapters.slack_adapter:SlackAdapter"
email = "horus_os.adapters.email_adapter:EmailAdapter"
calendar = "horus_os.adapters.calendar_adapter:CalendarAdapter"
otel = "horus_os.adapters.otel_adapter:OtelAdapter"
supabase = "horus_os.adapters.supabase_adapter:SupabaseAdapter"
scheduler = "horus_os.adapters.scheduler_adapter:SchedulerAdapter"

[project.urls]
Homepage = "https://github.com/Ridou/horus-os"
Issues = "https://github.com/Ridou/horus-os/issues"
Source = "https://github.com/Ridou/horus-os"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"horus_os.server" = ["static/*.html", "static/*.css", "static/*.js", "dashboard_dist/*", "dashboard_dist/**/*"]
"horus_os.observability" = ["pricing.json"]
"horus_os.seed" = ["agents/*/*.md", "vault/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "TID", # flake8-tidy-imports - banned-api enforcement (pkg_resources ban)
]
ignore = [
    "E501",  # line length is enforced by formatter, not linter
]

# Pitfall 3: pkg_resources is banned across src/horus_os/. It adds
# 1.3-1.5s of import overhead (the largest single foot-gun documented
# in .planning/research/PITFALLS.md) and its API is in deprecation drift
# on Python 3.12+. Use importlib.metadata.entry_points(group=...) for
# entry-point discovery (the canonical pattern lives at
# src/horus_os/adapters/base.py:22) and importlib.resources for packaged
# data files. tests/plugins/test_pkg_resources_banned.py is the Layer-2
# source-tree grep guard; this ruff rule is Layer 1.
#
# Pitfall 8 (Phase 48 / TEST-21): the reference plugin's src/ tree must
# import only from horus_os.plugins.api - the single public API surface.
# Every non-public horus_os submodule the plugin might reach for is
# banned below. Scope is the reference plugin path only; first-party
# horus_os modules and tests freely import any submodule. Per-file
# scoping is rule-code-granular (ruff resolves per-file-ignores by rule
# code, not per banned-api entry), so the per-file-ignores table below
# lists every path EXCEPT examples/horus-os-example-plugin/src/ as
# silencing TID251. The pkg_resources prohibition stays alive on the
# reference plugin path (it is not silenced there) AND on every other
# path via the Phase 42 layer-2 source-tree grep test
# (tests/plugins/test_pkg_resources_banned.py).
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pkg_resources".msg = "pkg_resources is banned (Pitfall 3 - 1.3-1.5s import overhead, deprecated API drift on 3.12+). Use importlib.metadata.entry_points(group=...) instead. See src/horus_os/adapters/base.py:22 for the canonical pattern."
# Note on prefix semantics: ruff's banned-api matches by exact dotted
# path AND any submodule. Banning "horus_os.plugins" would also ban
# "horus_os.plugins.api" - the sanctioned public surface - so we ban
# specific non-api submodules instead. A future `horus_os.plugins.<new>`
# would slip past these per-name entries; the layer-2 source-tree scan
# in tests/plugins/test_reference_plugin_public_api_only.py catches that
# case because its regex is "anything except horus_os.plugins.api".
"horus_os.adapters".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.types".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.spec".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.manifest".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.permissions".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.capability_catalog".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.discovery".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.loader".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.registry".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."
"horus_os.plugins.installer".msg = "Reference plugin must import only from horus_os.plugins.api (Pitfall 8 - single public API surface). See docs/PLUGINS.md 'Public API surface' section."

# Scope the horus_os.<non-api> bans to the reference plugin's src/ tree
# ONLY. Every other path silences TID251 so first-party code can import
# from any horus_os submodule. Note: this also silences the pkg_resources
# rule on those paths - Phase 42's tests/plugins/test_pkg_resources_banned.py
# is the source-tree-grep backstop that keeps pkg_resources out of
# src/horus_os/ regardless of ruff config drift.
#
# IMPORTANT: ruff's per-file-ignores globs match against the file's
# basename AND full relative path. A blanket "src/**/*.py" pattern
# would match BOTH the host's first-party src/horus_os/** AND the
# reference plugin's examples/.../src/** - silencing TID251 on the
# very tree we want to lock down. Phase 48 uses path patterns that
# explicitly include their parent component so the reference plugin's
# nested src/ does not slip through (the host's src/ has no parent
# component above the project root, so "src/**/*.py" without
# qualification would match it; we'd lose specificity if we used the
# same pattern with a wildcard prefix).
#
# Practical choice: list each host first-party path with NO wildcard
# prefix, and let ruff's pre-anchored "examples/horus-os-example-plugin/src/**/*.py"
# absence be the affirmative non-ignore for the reference plugin.
[tool.ruff.lint.per-file-ignores]
"src/horus_os/**/*.py" = ["TID251"]
"tests/**/*.py" = ["TID251"]
"scripts/**/*.py" = ["TID251"]
"docs/**/*.py" = ["TID251"]
"examples/horus-os-example-plugin/tests/**/*.py" = ["TID251"]
# Sibling adapter examples directly under examples/ - single path
# component each (e.g. examples/discord_adapter.py). Use a single-star
# glob so the reference plugin's nested src/ does NOT match.
"examples/calendar_adapter.py" = ["TID251"]
"examples/custom_adapter.py" = ["TID251"]
"examples/discord_adapter.py" = ["TID251"]
"examples/email_adapter.py" = ["TID251"]
"examples/multi_agent.py" = ["TID251"]
"examples/slack_adapter.py" = ["TID251"]
"examples/streaming.py" = ["TID251"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
# Phase 48: collect the reference plugin's in-process tier-1 tests
# under the host pytest invocation. The plugin's tests/conftest.py
# prepends its src/ to sys.path so the package imports without being
# pip-installed into the host venv (which would pollute the host's
# plugin-discovery tests with a discoverable entry point).
testpaths = ["tests", "examples/horus-os-example-plugin/tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "installer_e2e: requires --run-installer-e2e CLI flag (tier-3 clean-venv tests; ~30s session startup; ~5s per test)",
]
